# better-revsocks

./: README.md
client/: Cargo.toml
client/src/: client.rs  config.rs  error.rs  lib.rs  main.rs  socks.rs
server/: cli.go  commands.go  daemon_client.go  daemon_service.go  go.mod  go.sum  handler.go  main.go
