[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version="1.3.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time"] }
yamux = "0.13.3"
serde = "1.0.133"
serde_derive = "1.0.133"
snafu = "0.8.5"
thiserror = "1.0.30"
tokio-util = { version="0.7.12", features = ["compat"] }
futures = "0.3.31"
