[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version="1.3.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time"] }
yamux = "0.13.3"
tokio-util = { version="0.7.12", features = ["compat"] }
futures = "0.3.31"
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
tokio-native-tls = "0.3.1"
native-tls = "0.2.12"
